--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bull": "^4.0.0",
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
