--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bull": "^4.0.0",
     "axios": "^0.24.0",
+    "bull": "^4.0.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "redis": "^3.1.2"
   }
 }
