--- a/Gateway/package.json
+++ b/Gateway/package.json
@@ -14,6 +14,7 @@
     "bull": "^4.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "redis": "^3.1.2"
+    "redis": "^3.1.2",
+    "util.promisify": "^1.1.1"
   }
 }
