Se agrega logica de llamada exporter -> observations  (#17)

--- a/Exporter/.env
+++ b/Exporter/.env
@@ -1,1 +1,7 @@
 PORT=8001
+BASE_URL=http://localhost:
+OBSERVATIONS_PORT=5000
+OBSERVATIONS_PATH=/observations
+LOGIN_PORT=3002
+LOGIN_PATH=/login/user/exporter/
+MAX_RETRIES=3
