caudno se actualiza o orra un sensor se envia el sensor a una cola de mensajes que consumira Gateway para actualizar el cache

--- a/Analitics/.env
+++ b/Analitics/.env
@@ -1,4 +1,8 @@
 PORT=8003
 QUEUE_NAME=pendingValidation
-ETHEREAL_USER=bernie.rutherford62@ethereal.email
-ETHEREAL_PASS=4ne2SjECe1kbTu6AGY
+ETHEREAL_USER=OblArqui2021@gmail.com
+ETHEREAL_PASS=Arqui2021
+
+
+
+
