--- a/Catalog/config/config.json
+++ b/Catalog/config/config.json
@@ -6,5 +6,10 @@
       "host": "127.0.0.1",
       "dialect": "mysql",
       "operatorsAliases": 0
+    },
+    "updateSensor": {
+      "name": "updateSensor",
+      "port": 6379,
+      "host": "localhost"
     }
   }
