--- a/Analitics/.env
+++ b/Analitics/.env
@@ -2,6 +2,11 @@ PORT=8003
 QUEUE_NAME=pendingValidation
 ETHEREAL_USER=OblArqui2021@gmail.com
 ETHEREAL_PASS=Arqui2021
+APP_NAME=ANALYTICS
+BASE_URL=http://localhost:
+OBSERVATIONS_PORT=5000
+OBSERVATIONS_PATH=/observations
+
 
 
 
