--- a/Utils/email/package.json
+++ b/Utils/email/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "Analitics",
+  "name": "email",
   "version": "1.0.0",
-  "description": "",
+  "description": "sends emails",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0",
-    "bull": "^4.1.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "nodemailer": "^6.7.1"
   }
 }
