--- a/Observations/package.json
+++ b/Observations/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "mysql2": "^2.3.3-rc.0",
+    "nodemailer": "^6.7.1",
     "sequelize": "^6.8.0"
   }
 }
