--- a/Axios/package.json
+++ b/Axios/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Analitics",
+  "name": "Axios",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bull": "^4.1.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "nodemailer": "^6.7.1"
+    "axios": "^0.24.0"
   }
 }
