Se actualiza libreria de envio de mails para hacerla mas generica

--- a/Observations/package.json
+++ b/Observations/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bull": "^4.0.0",
     "config": "^3.3.6",
+    "cron-parser": "^4.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
