--- a/Analitics/package.json
+++ b/Analitics/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bull": "^4.1.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "config": "^3.3.6"
   }
 }
